# toybox-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-deploy-docs.yml
gl/: Cargo.toml  build.rs
src/: audio.rs  engine.rs  gfx.rs  imgui_backend.rs  lib.rs  prelude.rs  utility.rs  window.rs
src/audio/: buffer_cache.rs  bus.rs  effect.rs  envelope.rs  execution_graph.rs  generator.rs  intermediate_buffer.rs  intermediate_buffer_cache.rs  node_builder.rs  node_graph.rs  nodes.rs  parameter.rs  ringbuffer.rs  scratch_buffer.rs  scratch_buffer_cache.rs  system.rs  util.rs
src/audio/runtime/: node_graph.rs  scratch_buffer.rs  system.rs
src/gfx/: buffer.rs  context.rs  draw_context.rs  framebuffer.rs  mesh.rs  resource_context.rs  resource_scope.rs  resources.rs  shader.rs  system.rs  texture.rs  vao.rs  vertex.rs
src/gfx/mesh/: color_mesh_builder.rs  geom_2d.rs  geom_3d.rs  plane_mesh_builder_adaptor.rs  traits.rs  util.rs
src/imgui/: imgui.frag.glsl
src/input/: action.rs  context.rs  context_group.rs  context_macro.rs  raw.rs  system.rs
src/utility/: id_counter.rs  resource.rs  resource_scope.rs
src/utility/resource/: resource_lock.rs  resource_ref_cell.rs
toybox/: Cargo.toml  README.md
toybox-audio/: Cargo.toml
toybox-audio/src/: device.rs  lib.rs
toybox-bus/: Cargo.toml
toybox-bus/src/: lib.rs
toybox-cfg/: Cargo.toml
toybox-cfg/src/: lib.rs  table.rs
toybox-egui/: Cargo.toml
toybox-egui/src/: conversions.rs  egui.fs.glsl  egui.vs.glsl  egui_text.fs.glsl  lib.rs  renderer.rs  textures.rs
toybox-gfx/: Cargo.toml
toybox-gfx/src/: bindings.rs  command.rs  command_group.rs  core.rs  frame.rs  frame_encoder.rs  lib.rs  resource_manager.rs  resources.rs  shaders.rs  upload_heap.rs
toybox-gfx/src/command/: compute.rs  dispatch.rs  draw.rs
toybox-gfx/src/core/: barrier.rs  buffer.rs  capabilities.rs  fbo.rs  global_state.rs  image.rs  sampler.rs  shader.rs  shader_pipeline.rs  vao.rs
toybox-gfx/src/core/image/: format.rs
toybox-gfx/src/resource_manager/: arguments.rs  framebuffer.rs  image.rs  request.rs  shader.rs
toybox-gfx/src/resource_manager/arguments/: buffer_argument.rs  framebuffer_argument.rs  image_argument.rs  sampler_argument.rs  shader_argument.rs
toybox-gfx/src/resource_manager/image/: create_image.rs  load_image.rs
toybox-gfx/src/resource_manager/shader/: compile_shader_request.rs  load_shader_request.rs
toybox-gfx/src/resources/: framebuffer.rs  image.rs  request.rs
toybox-gfx/src/resources/arguments/: framebuffer_argument.rs
toybox-gfx/src/resources/image/: create_image.rs  load_image.rs
toybox-gfx/src/resources/shader/: compile_shader_request.rs  load_shader_request.rs
toybox-gfx/src/shaders/: flat_untextured.fs.glsl  standard.vs.glsl
toybox-host/: Cargo.toml
toybox-host/src/: lib.rs
toybox-input/: Cargo.toml
toybox-input/src/: debug.rs  keys.rs  lib.rs  tracker.rs
toybox-msg/: Cargo.toml
toybox-msg/src/: lib.rs
toybox-vfs/: Cargo.toml
toybox-vfs/src/: lib.rs
toybox/old-src/: audio.rs  gfx.rs  imgui_backend.rs  lib.rs  perf.rs
toybox/old-src/audio/: generator.rs  nodes.rs
toybox/old-src/audio/nodes/: compressor_node.rs  mixer_node.rs
toybox/old-src/audio/runtime/: execution_graph.rs  scratch_buffer_cache.rs
toybox/old-src/gfx/: capabilities.rs
toybox/old-src/gfx/mesh/: color_mesh_builder.rs  geom_3d.rs
toybox/old-src/input/: context.rs  raw.rs
toybox/src/: context.rs  debug.rs  engine.rs  input.rs  lib.rs  prelude.rs  resources.rs  window.rs
toybox/src/audio/: effect.rs  node_builder.rs  parameter.rs  runtime.rs
toybox/src/audio/runtime/: system.rs
toybox/src/gfx/: framebuffer.rs  mesh.rs  resource_context.rs  texture.rs
toybox/src/gfx/mesh/: plane_mesh_builder_adaptor.rs  traits.rs
toybox/src/imgui/: imgui.vert.glsl
toybox/src/input/: action.rs  context_group.rs  frame_state.rs  system.rs
toybox/src/utility/: borrow_state.rs
toybox/src/utility/resource/: resource_ref_cell.rs
