[workspace]
resolver = "2"
members = [
	"gl",
	"toybox",
	"toybox-audio",
	"toybox-bus",
	"toybox-cfg",
	"toybox-egui",
	"toybox-gfx",
	"toybox-host",
	"toybox-input",
	"toybox-vfs",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]
rust-version = "1.88"


[workspace.dependencies]
anyhow = "1.0"

winit = "0.30.5"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

smallvec = "1.15"

common = { git = "https://github.com/manpat/common-rs.git", version = ">=0.5.0", features=["interop", "serde"] }
toy = { git = "https://github.com/manpat/toy-rs.git" }

toybox-host = { path = "toybox-host" }
toybox-gfx = { path = "toybox-gfx" }
toybox-audio = { path = "toybox-audio" }
toybox-input = { path = "toybox-input" }
toybox-egui = { path = "toybox-egui" }
toybox-cfg = { path = "toybox-cfg" }
toybox-vfs = { path = "toybox-vfs" }
toybox-bus = { path = "toybox-bus" }

gl = { path = "gl" }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", features = ["preserve_order"] }

mint = "0.5"
cint = "0.3"

tracing = "0.1"

log = "0.4"

[workspace.dependencies.egui]
# Specific commit so we can us winit 0.30.5
git = "https://github.com/emilk/egui.git"
rev = "1f6ae49a5f6bf43a869c215dea0d3028be8d742a"
# version = "0.28.1"
default-features=true
features=["cint", "mint"]

[workspace.dependencies.egui-winit]
# Specific commit so we can us winit 0.30.5
git = "https://github.com/emilk/egui.git"
rev = "1f6ae49a5f6bf43a869c215dea0d3028be8d742a"
# version = "0.28.1"
