[package]
name = "toybox-audio"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
anyhow.workspace = true
log.workspace = true
tracing.workspace = true