[package]
name = "toybox-cfg"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = {version="0.8.10", features=["preserve_order"]}
anyhow.workspace = true
tracing.workspace = true
log.workspace = true

toybox-vfs.workspace = true