[package]
name = "toybox-cfg"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
log.workspace = true

toybox-vfs.workspace = true