[package]
name = "toybox-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

egui.workspace = true
egui-winit.workspace = true

toybox-gfx.workspace = true
common.workspace = true

mint.workspace = true
cint.workspace = true