[package]
name = "toybox-egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tracing.workspace = true

egui.workspace = true
egui-winit.workspace = true

toybox-gfx.workspace = true
common.workspace = true

mint.workspace = true
cint.workspace = true