[package]
name = "toybox-gfx"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
common.workspace = true
log.workspace = true

toybox-host.workspace = true
toybox-vfs.workspace = true

bumpalo = "3.12.1"

[dependencies.image]
version = "0.24"
features = ["png"]