[package]
name = "toybox-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
winit.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
raw-window-handle.workspace = true

common.workspace = true
gl.workspace = true
