[package]
name = "toybox-host"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
winit.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
raw-window-handle.workspace = true

common.workspace = true
gl.workspace = true

log.workspace = true
env_logger = "0.9.0"