[package]
name = "toybox-host"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

winit.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
raw-window-handle.workspace = true

common.workspace = true
gl.workspace = true

log.workspace = true
simplelog = "0.12.1"
log-panics = { version = "2", features = ["with-backtrace"] }

tracing.workspace = true
tracing-subscriber = "0.3"
tracing-tracy = { version = "=0.11.1", optional = true }
tracy-client = { version = "=0.17.1", optional = true }


[features]
tracy = ["dep:tracing-tracy", "dep:tracy-client", "tracing-tracy/enable"]