[package]
name = "toybox-input"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
winit.workspace = true
egui.workspace = true
common.workspace = true
log.workspace = true
tracing.workspace = true


gilrs = { version = "0.10.2", optional = true }

[features]
default = []
gamepad = ["dep:gilrs"]