[package]
name = "toybox"
version = "0.4.0"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]
edition = "2021"

[dependencies]
toybox-host = { path = "../toybox-host" }
toybox-gfx = { path = "../toybox-gfx" }
toybox-audio = { path = "../toybox-audio" }
toybox-input = { path = "../toybox-input" }
toybox-egui = { path = "../toybox-egui" }
toybox-cfg = { path = "../toybox-cfg" }


common = { git = "https://github.com/manpat/common-rs.git", version = ">=0.3", features=["serde"] }
toy = { git = "https://github.com/manpat/toy-rs.git" }

anyhow = "1.0"

# bitflags = "1.2"
# slotmap = "1.0"
# petgraph = "0.6"
# rayon = "1.5"
# itertools = "0.10"

# lewton = "0.10.*"
# thiserror = "1.0"
# dasp = "0.11"


# symphonia = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.8", optional = true }


# [dependencies.image]
# version = "0.24"
# features = ["png"]


# [dependencies.imgui]
# version = "0.8"
# features = ["tables-api"]


# [dependencies.sdl2]
# version = ">=0.33"
# features = ["bundled", "static-link"]


# for thread priority
# [target.'cfg(unix)'.dependencies]
# libc = "0.2"

# [target.'cfg(windows)'.dependencies]
# libc = "0.2"
# winapi = { version = "0.3", features = ["errhandlingapi", "processthreadsapi", "winnt", "minwindef", "winbase"] }



[features]
tracy = ["dep:tracing-tracy"]