[package]
name = "toybox"
version = "0.4.0"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]
edition = "2021"

[dependencies]
toybox-host.workspace = true
toybox-gfx.workspace = true
toybox-audio.workspace = true
toybox-input.workspace = true
toybox-egui.workspace = true
toybox-cfg.workspace = true


common.workspace = true
toy.workspace = true

mint.workspace = true
cint.workspace = true

anyhow.workspace = true

# bitflags = "1.2"
# slotmap = "1.0"
# petgraph = "0.6"
# rayon = "1.5"
# itertools = "0.10"

# lewton = "0.10.*"
# thiserror = "1.0"
# dasp = "0.11"


# symphonia = "0.4"

tracing.workspace = true
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.8", optional = true }


# [dependencies.image]
# version = "0.24"
# features = ["png"]


# [dependencies.imgui]
# version = "0.8"
# features = ["tables-api"]


# [dependencies.sdl2]
# version = ">=0.33"
# features = ["bundled", "static-link"]


# for thread priority
# [target.'cfg(unix)'.dependencies]
# libc = "0.2"

# [target.'cfg(windows)'.dependencies]
# libc = "0.2"
# winapi = { version = "0.3", features = ["errhandlingapi", "processthreadsapi", "winnt", "minwindef", "winbase"] }



[features]
tracy = ["dep:tracing-tracy"]